syntax="proto3";

package main;

option go_package = ".";

message AnotherStruct {
  string field1 = 1;
  string field2 = 2;
}

message Person {
  string name = 1;
  int32 age = 2;
  AnotherStruct anotherStruct = 3;
}